syntax = "proto3";

package url;

option go_package = "./pkg/url/pb";


service URLService {
    rpc AddURL(AddURLRequest) returns (AddURLResponse) {}
    rpc GetURL(GetURLRequest) returns (GetURLResponse) {}
    rpc SetActiveUrl(SetActiveUrlRequest) returns (SetActiveUrlResponse) {}
    rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse) {}
}

message AddURLRequest {
    int64 user_id = 1;
    string url = 2;
}

message AddURLResponse {
    int64 status = 1;
    URL url = 2;
}

message GetURLRequest {
    int64 id = 1;
}

message GetURLResponse {
    int64 status = 1;
    URL url = 2;
}

message SetActiveUrlRequest {
    int64 url_id = 1;
    int64 user_id = 2;
}

message SetActiveUrlResponse {
    int64 status = 1;
}


message URL {
    int64 id = 1;
    int64 user_id = 2;
    string url = 3;
}


message GetUserURLsRequest {
    int64 user_id = 1;
}


message GetUserURLsResponse {
    int64 status = 1;
    repeated URL url = 2;
}
